--- a/src/header/header.css
+++ b/src/header/header.css
@@ -9,6 +9,11 @@ body {
     font-size: 50px;
 }
 
+header {
+    font-family: "Roboto";
+    font-size: 50px;
+}
+
 .navbar {
     background-color: #140067;
 }
