Changed plus icon & changed nav size

--- a/app/src/header/header.css
+++ b/app/src/header/header.css
@@ -36,6 +36,8 @@ header {
 
 .custom-toggler .navbar-toggler-icon {
     background-image: url("../../img/Menu_button.svg");
+    height: 50px;
+    width: 50px;
 }
 
 
