--- a/app/src/realisations/Realisations.css
+++ b/app/src/realisations/Realisations.css
@@ -1,41 +1,44 @@
-.photo-gallery {
-    color:#313437;
-    background-color:#fff;
+.lightbox-gallery {
+    background-repeat: no-repeat;
+    color: #000;
+    overflow-x: hidden
 }
 
-.photo-gallery p {
-    color:#7d8285;
+.lightbox-gallery p {
 }
 
-.photo-gallery h2 {
-    font-weight:bold;
-    margin-bottom:40px;
-    padding-top:40px;
-    color:inherit;
+p {
+    font-size: 35px;
 }
 
-@media (max-width:767px) {
-    .photo-gallery h2 {
-        margin-bottom:25px;
-        padding-top:25px;
-        font-size:24px;
+.lightbox-gallery h2 {
+    font-weight: bold;
+    margin-bottom: 40px;
+    padding-top: 40px;
+}
+
+@media (max-width:3000px) {
+    .lightbox-gallery h2 {
+        margin-bottom: 25px;
+        padding-top: 25px;
+        font-size: 50px;
     }
 }
 
-.photo-gallery .intro {
-    font-size:16px;
-    max-width:500px;
-    margin:0 auto 40px;
+.lightbox-gallery .intro {
+    font-size: 16px;
+    max-width: 500px;
+    margin: 0 auto 40px
 }
 
-.photo-gallery .intro p {
-    margin-bottom:0;
+.lightbox-gallery .intro p {
+    margin-bottom: 0
 }
 
-.photo-gallery .photos {
-    padding-bottom:20px;
+.lightbox-gallery .photos {
+    padding-bottom: 20px
 }
 
-.photo-gallery .item {
-    padding-bottom:30px;
+.lightbox-gallery .item {
+    padding-bottom: 30px
 }
