--- a/app/src/realisations/Realisations.css
+++ b/app/src/realisations/Realisations.css
@@ -1,44 +1,95 @@
-.lightbox-gallery {
-    background-repeat: no-repeat;
-    color: #000;
-    overflow-x: hidden
+body {
+    background-color: #f9f9fa
 }
 
-.lightbox-gallery p {
-}
-
-p {
-    font-size: 35px;
-}
-
-.lightbox-gallery h2 {
-    font-weight: bold;
-    margin-bottom: 40px;
-    padding-top: 40px;
+.flex {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto
 }
 
 @media (max-width:3000px) {
-    .lightbox-gallery h2 {
-        margin-bottom: 25px;
-        padding-top: 25px;
-        font-size: 50px;
+    .padding {
+        padding: 1.5rem
     }
 }
 
-.lightbox-gallery .intro {
-    font-size: 16px;
-    max-width: 500px;
-    margin: 0 auto 40px
+@media (max-width:3000px) {
+    .padding {
+        padding: 1rem
+    }
 }
 
-.lightbox-gallery .intro p {
-    margin-bottom: 0
+.padding {
+    padding: 5rem
 }
 
-.lightbox-gallery .photos {
-    padding-bottom: 20px
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid #d2d2dc;
+    border-radius: 0
 }
 
-.lightbox-gallery .item {
-    padding-bottom: 30px
+.card .card-body {
+    padding: 1.25rem 1.75rem
+}
+
+.card-body {
+    flex: 1 1 auto;
+    padding: 1.25rem
+}
+
+.card .card-title {
+    color: #000000;
+    margin-bottom: 0.625rem;
+    text-transform: capitalize;
+    font-size: 0.875rem;
+    font-weight: 500
+}
+
+p {
+    font-size: 0.875rem;
+    margin-bottom: .5rem;
+    line-height: 1.5rem
+}
+
+.lightGallery {
+    width: 100%;
+    margin: 0
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px
+}
+
+.lightGallery .image-tile {
+    position: relative;
+    margin-bottom: 30px;
+    margin-right: 10px
+}
+
+.lightGallery .image-tile .demo-gallery-poster {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0
+}
+
+.lightGallery .image-tile .demo-gallery-poster img {
+    display: block;
+    margin: auto;
+    width: 40%;
+    max-width: 60px;
+    min-width: 20px;
+    margin-top: 80px
 }
