--- a/webpage/assets/css/blk-design-system-pro.css
+++ b/webpage/assets/css/blk-design-system-pro.css
@@ -645,12 +645,12 @@ pre code {
 }
 
 .custom-div-subtitle {
-  top: 62% !important;
+  top: 53% !important;
   left: 52% !important;
 }
 
 .custom-didit-cards {
-  top: -243px;
+  top: -180px;
 }
 
 .custom-top-30 {
@@ -676,14 +676,44 @@ pre code {
     width: 50px;
 }
 
+.rounded-2 {
+  border-radius: 1rem;
+}
+
 .didit-letsgo {
   line-height: 1.8em;
-  font-size: 1em;
+  font-size: 2rem;
   font-weight: 400;
+  padding: 1rem;
 }
 
 .mb-10 {
     margin-bottom: 10rem !important;
+}
+
+.bg-yellow-didit {
+  background-color: #ffc600;
+}
+
+.id-card {
+  transform: rotate(-7deg);
+  width: 50%;
+}
+
+.no-bg-image {
+  background-image: none !important;
+}
+
+.left-0 {
+  left: 0;
+}
+
+.font-size-1 {
+  font-size: 1rem;
+}
+
+.my-w-100 {
+  width: 100%;
 }
 
 @media (min-width: 576px) {
@@ -1128,6 +1158,15 @@ pre code {
   .offset-sm-11 {
     margin-left: 91.666667%;
   }
+  .w-sm-200 {
+    width: 200% !important;
+  }
+  .l-sm--100 {
+    left: -100%;
+  }
+  .t-sm-55 {
+    top: 55% !important;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1269,6 +1308,12 @@ pre code {
   }
   .offset-md-11 {
     margin-left: 91.666667%;
+  }
+  .font-md-default {
+    font-size: 1.4375rem;
+  }
+  .t-md-53 {
+    top: 53% !important;
   }
 }
 
@@ -1412,6 +1457,15 @@ pre code {
   .offset-lg-11 {
     margin-left: 91.666667%;
   }
+  .w-lg-100 {
+    width: 100% !important;
+  }
+  .l-lg-0 {
+    left: 0;
+  }
+  .t-lg-59 {
+    top: 59% !important;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -1553,6 +1607,9 @@ pre code {
   }
   .offset-xl-11 {
     margin-left: 91.666667%;
+  }
+  .t-xl-61 {
+    top: 61% !important;
   }
 }
 
