--- a/app/src/realisations/realisations.css
+++ b/app/src/realisations/realisations.css
@@ -1,95 +1,35 @@
-body {
-    background-color: #f9f9fa
+#plus_button {
+    background-color: #ffc600;
+    border-color: #ffc600;
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    margin-bottom: 10%;
 }
 
-.flex {
-    -webkit-box-flex: 1;
-    -ms-flex: 1 1 auto;
-    flex: 1 1 auto
+#plus_icon {
+    color: #140067;
+    font-size: 100px;
+    margin-top: 10%;
 }
 
-@media (max-width:3000px) {
-    .padding {
-        padding: 1.5rem
-    }
+iframe {
+    width: 100%;
+    height: 500px;
+    border: none;
 }
 
-@media (max-width:3000px) {
-    .padding {
-        padding: 1rem
-    }
-}
-
-.padding {
-    padding: 5rem
-}
-
-.card {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border: 1px solid #d2d2dc;
-    border-radius: 0
-}
-
-.card .card-body {
-    padding: 1.25rem 1.75rem
-}
-
-.card-body {
-    flex: 1 1 auto;
-    padding: 1.25rem
-}
-
-.card .card-title {
-    color: #000000;
-    margin-bottom: 0.625rem;
-    text-transform: capitalize;
-    font-size: 0.875rem;
-    font-weight: 500
+h2 {
+    font-size: 50px;
+    color: #140067;
 }
 
 p {
-    font-size: 0.875rem;
-    margin-bottom: .5rem;
-    line-height: 1.5rem
+    font-size: 40px;
+    color: #140067;
 }
 
-.lightGallery {
-    width: 100%;
-    margin: 0
-}
-
-.row {
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px
-}
-
-.lightGallery .image-tile {
-    position: relative;
-    margin-bottom: 30px;
-    margin-right: 10px
-}
-
-.lightGallery .image-tile .demo-gallery-poster {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0
-}
-
-.lightGallery .image-tile .demo-gallery-poster img {
-    display: block;
-    margin: auto;
-    width: 40%;
-    max-width: 60px;
-    min-width: 20px;
-    margin-top: 80px
+hr {
+    color: #ffc600;
+    height: 10px !important;
 }
