--- a/webpage/assets/css/blk-design-system-pro.css
+++ b/webpage/assets/css/blk-design-system-pro.css
@@ -721,6 +721,12 @@ pre code {
   padding-left: 1rem;
 }
 
+@media (min-width: 1400px) {
+  .t-xxl-70 {
+    top: 70% !important;
+  }
+}
+
 @media (min-width: 576px) {
   .container {
     max-width: 540px;
